# dataset-maker

./: .gitignore  LICENSE  README.md  emilia_pipeline.py  faster_whisper_impl.py  gradio_interface.py  infer_uvr.py  llm_reformatter_concept.py  llm_reformatter_script.py  pyproject.toml  safe_globals.py  sequential_whisper.py  slicer2.py  test_call_emi.py  transcriber.py
Emilia/: config_example.json
Emilia/models/: whisper_asr.py
Emilia/utils/: tool.py
ultimatevocalremovergui/: README.md  separate.py
